--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -3,13 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <TextView
         android:layout_width="fill_parent"
         android:layout_height="100dp"
-        android:hint="@string/add_title"
+        android:hint="@string/delete_title"
         android:layout_weight="1"
         android:maxLength="32"
         android:maxLines="1"
         android:singleLine="true"
-        android:id="@+id/add_title" />
+        android:id="@+id/delete_title" />
 </LinearLayout>
