Corrections about DialogFragment "New/Delete"

--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -5,11 +5,10 @@
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
         android:hint="@string/delete_title"
         android:layout_weight="1"
-        android:maxLength="32"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:id="@+id/delete_title" />
+        android:singleLine="false"
+        android:id="@+id/delete_title"
+        android:gravity="center" />
 </LinearLayout>
