Update of element view

--- a/app/src/main/res/layout/element_list.xml
+++ b/app/src/main/res/layout/element_list.xml
@@ -3,15 +3,18 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView android:layout_width="wrap_content"
+    <TextView android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/element_title_text"
-        android:textAppearance="@style/BPMListStyle" />
+        android:textAppearance="@style/BPMListStyle"
+        android:singleLine="true"
+        android:layout_weight="1" />
 
-    <TextView android:layout_width="match_parent"
+    <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="end"
         android:id="@+id/element_text_bpm"
-        android:textAppearance="@style/BPMListStyle" />
+        android:textAppearance="@style/BPMListStyle"
+        android:singleLine="true" />
 
 </LinearLayout>
