--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_weight="1" />
 
-    <TextView android:text="@string/bpm"
-        android:textAppearance="@style/BPMStyle"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/bpm_text"
-        android:layout_weight="2" />
-
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -37,21 +29,36 @@
             android:layout_height="fill_parent"
             android:text="@string/reset_button_text"
             android:id="@+id/reset_button"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
 
-        <Button
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:text="@string/button_text"
-            android:id="@+id/bpm_button"
-            android:layout_weight="1" />
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView android:text="@string/bpm"
+                android:textAppearance="@style/BPMStyle"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/bpm_text"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:text="@string/button_text"
+                android:id="@+id/bpm_button"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:text="@string/save_button_text"
             android:id="@+id/save_button"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
     </LinearLayout>
 
 </LinearLayout>
