--- a/app/src/main/res/layout/dialog_new.xml
+++ b/app/src/main/res/layout/dialog_new.xml
@@ -3,12 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:textAppearance="@style/DialogTitleStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:hint="@string/add_element_title"
+        android:layout_weight="1"
+        android:gravity="center_vertical" />
+    
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:hint="@string/add_title"
+        android:hint="@string/add_element"
         android:layout_weight="1"
-        android:maxLength="32"
         android:maxLines="1"
         android:singleLine="true"
         android:id="@+id/add_title" />
