--- a/app/src/main/res/layout/dialog_set.xml
+++ b/app/src/main/res/layout/dialog_set.xml
@@ -3,13 +3,21 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:textAppearance="@style/DialogTitleStyle"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:hint="@string/set_element_title"
+        android:layout_weight="1"
+        android:gravity="center_vertical" />
+
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:hint="@string/set_title"
+        android:hint="@string/set_element"
         android:layout_weight="1"
         android:maxLength="32"
         android:maxLines="1"
         android:singleLine="true"
-        android:id="@+id/set_title" />
+        android:id="@+id/set_element" />
 </LinearLayout>
