--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
 
     <dimen name="BPMTextSize">64dp</dimen>
     <dimen name="ElementTextSize">32dp</dimen>
+    <dimen name="DialogTitleTextSize">20dp</dimen>
 </resources>
