--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,14 +10,14 @@
         <item name="android:textSize">@dimen/BPMTextSize</item>
     </style>
 
-    <!-- Dialog title Text Style -->
-    <style name="DialogTitleStyle" parent="@android:style/TextAppearance" >
-        <item name="android:textSize">@dimen/DialogTitleTextSize</item>
-    </style>
-
     <!-- Element BPMList Text Style -->
     <style name="BPMListStyle" parent="@android:style/TextAppearance" >
         <item name="android:textSize">@dimen/ElementTextSize</item>
+    </style>
+
+    <!-- Edit Dialog Text Style -->
+    <style name="EditDialogStyle" parent="@android:style/TextAppearance" >
+        <item name="android:textSize">@dimen/EditDialogSize</item>
     </style>
 
 </resources>
