--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppBaseTheme" parent="@android:style/Theme.Holo"/>
-    <style name="AppTheme" parent="AppBaseTheme">
+    <!-- Base application theme. "@android:style/Theme.Holo" -->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
         <!-- Customize your theme here. -->
-    </style>
+    <!--</style>-->
 
     <!-- BPM Text Style -->
     <style name="BPMStyle" parent="@android:style/TextAppearance" >
