--- a/app/src/main/res/layout/dialog_new.xml
+++ b/app/src/main/res/layout/dialog_new.xml
@@ -10,6 +10,6 @@
         android:layout_weight="1"
         android:maxLines="1"
         android:singleLine="true"
-        android:id="@+id/add_title"
+        android:id="@+id/add_element"
         android:textAppearance="@style/EditDialogStyle" />
 </LinearLayout>
