--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,26 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_centerHorizontal="true"
     android:layout_alignParentTop="true"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#546e7a">
 
-    <ListView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listBPM"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:padding="1dp"
+        android:background="#37474f">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/listBPM"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:background="#90a4ae"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp" />
+    </FrameLayout>
 
     <TextView android:text="@string/bpm"
         android:textAppearance="@style/BPMStyle"
@@ -24,7 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/bpm_text"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        android:textColor="#eceff1" />
 
     <LinearLayout
         android:orientation="horizontal"
