--- a/app/src/main/res/layout/element_list.xml
+++ b/app/src/main/res/layout/element_list.xml
@@ -8,13 +8,15 @@
         android:id="@+id/element_title_text"
         android:textAppearance="@style/BPMListStyle"
         android:singleLine="true"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:textColor="#263238" />
 
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="end"
         android:id="@+id/element_text_bpm"
         android:textAppearance="@style/BPMListStyle"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:textColor="#263238" />
 
 </LinearLayout>
