--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,15 @@
 <resources>
 
-    <!-- Base application theme. "@android:style/Theme.Holo" -->
-    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!-- Customize your theme here. -->
-    <!--</style>-->
+    <!-- Base application theme. "@android:style/Theme.Holo"
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@drawable/actionbar_background</item>
+    </style>
 
     <!-- BPM Text Style -->
     <style name="BPMStyle" parent="@android:style/TextAppearance" >
@@ -20,4 +26,5 @@
         <item name="android:textSize">@dimen/EditDialogSize</item>
     </style>
 
+    <drawable name="actionbar_background">#263238</drawable>
 </resources>
