--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,8 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    <!-- TODO Ajouter la possibilité de changer de langue et de style de l'application
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+     -->
     <item android:id="@+id/action_delete_all" android:title="@string/action_delete_all"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
