--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,16 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
     <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarWidgetTheme">@style/MyActionBar.widget</item>
     </style>
 
     <!-- ActionBar styles -->
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@drawable/actionbar_background</item>
+    </style>
+
+    <style name="MyActionBar.widget" parent="@android:style/Theme.Holo.Light">
+        <item name="android:popupBackground">@drawable/actionbarmenu_background</item>
     </style>
 
     <!-- BPM Text Style -->
@@ -27,4 +32,10 @@
     </style>
 
     <drawable name="actionbar_background">#263238</drawable>
+    <drawable name="actionbarmenu_background">#455a64</drawable>
+    <drawable name="application_background">#546e7a</drawable>
+    <drawable name="application_border">#37474f</drawable>
+    <drawable name="list_background">#90a4ae</drawable>
+    <drawable name="text_BPM_foreground">#eceff1</drawable>
+    <drawable name="text_list_foreground">#263238</drawable>
 </resources>
