--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,19 @@
 <resources>
 
-    <!-- Base application theme. "@android:style/Theme.Holo"
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <!-- the theme applied to the application or activity -->
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
-        <item name="android:actionBarWidgetTheme">@style/MyActionBar.widget</item>
+
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/MyActionBar</item>
     </style>
 
     <!-- ActionBar styles -->
-    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+    <style name="MyActionBar" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@drawable/actionbar_background</item>
-    </style>
 
-    <style name="MyActionBar.widget" parent="@android:style/Theme.Holo.Light">
-        <item name="android:popupBackground">@drawable/actionbarmenu_background</item>
+        <!-- Support library compatibility -->
+        <item name="background">@drawable/actionbar_background</item>
     </style>
 
     <!-- BPM Text Style -->
@@ -32,7 +32,7 @@
     </style>
 
     <drawable name="actionbar_background">#263238</drawable>
-    <drawable name="actionbarmenu_background">#455a64</drawable>
+    <drawable name="actionbar_menu_background">#455a64</drawable>
     <drawable name="application_background">#546e7a</drawable>
     <drawable name="application_border">#37474f</drawable>
     <drawable name="list_background">#90a4ae</drawable>
