--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,12 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">8dp</dimen>
-    <dimen name="activity_vertical_margin">8dp</dimen>
+    <dimen name="activity_horizontal_margin">0dp</dimen>
+    <dimen name="activity_vertical_margin">0dp</dimen>
+    <dimen name="activity_top_margin">8dp</dimen>
+
+    <dimen name="bar_height">56dp</dimen>
 
     <dimen name="BPMTextSize">64dp</dimen>
-    <dimen name="ElementTextSize">32dp</dimen>
+    <dimen name="ElementTextSize">16sp</dimen>
     <dimen name="EditDialogSize">20dp</dimen>
 </resources>
