--- a/app/src/main/res/layout/element_list.xml
+++ b/app/src/main/res/layout/element_list.xml
@@ -4,12 +4,15 @@
     android:layout_height="wrap_content">
 
     <TextView android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:id="@+id/element_title_text"
         android:textAppearance="@style/BPMListStyle"
         android:singleLine="true"
         android:layout_weight="1"
-        android:textColor="@drawable/text_list_foreground" />
+        android:textColor="@drawable/text_list_foreground"
+        android:paddingTop="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp" />
 
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
