--- a/app/src/main/res/layout/dialog_set.xml
+++ b/app/src/main/res/layout/dialog_set.xml
@@ -6,7 +6,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:hint="@string/add_element"
+        android:hint="@string/add_title"
         android:layout_weight="1"
         android:maxLines="1"
         android:singleLine="true"
