--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,7 +46,7 @@
         <item name="android:textSize">@dimen/EditDialogSize</item>
     </style>
 
-    <drawable name="actionbar_background">#1e88e5</drawable>
+    <drawable name="actionbar_background">#216eda</drawable>
     <drawable name="application_background">#ffffff</drawable>
     <drawable name="list_background">#ffffff</drawable>
     <drawable name="text_BPM_foreground">#1f1f1f</drawable>
